--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   database:
     image: "mongo"
     container_name: "mongo-dev"
-  
+
     ports:
       - "27017:27017"
-    volumes: 
+    volumes:
       - ../initMongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - ../data/mongodb:/data/db
-  redis:
-    container_name: "redis-dev"
-    image: "redis:6.2.1-alpine"
-    ports: 
-      - "6379:6379"
+  # redis:
+  #   container_name: "redis-dev"
+  #   image: "redis:6.2.1-alpine"
+  #   ports:
+  #     - "6379:6379"
