--- a/pages/leonardo-social-platform/package.json
+++ b/pages/leonardo-social-platform/package.json
@@ -11,6 +11,7 @@
     "@hapi/iron": "^6.0.0",
     "@magic-sdk/admin": "^1.3.0",
     "magic-sdk": "^4.1.1",
+    "mongoose": "^5.11.15",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
