--- a/pages/leonardo-social-platform/package.json
+++ b/pages/leonardo-social-platform/package.json
@@ -12,6 +12,7 @@
     "@magic-sdk/admin": "^1.3.0",
     "magic-sdk": "^4.1.1",
     "mongoose": "^5.11.15",
+    "nanoid": "^3.1.22",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
