added dockerfiles and docker-compose files for development and distribution (the later is WIP)

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,15 +1,27 @@
+# docker-compose -f ./docker-compose.dev.yml up --build
 version: "3.9"
 services:
-  web:
-    build: ./pages/leonardo-social-platform/
-    container_name: "web"
+  web_dev:
+    build:
+      context: ./pages/leonardo-social-platform/
+      dockerfile: dev.Dockerfile
+    container_name: "web_dev"
     ports:
       - "3000:3000"
     depends_on:
       - database_dev
     environment:
-      WAIT_HOSTS: mongo:27017
-  database:
+      WAIT_HOSTS: db:27017
+      WAIT_HOSTS_TIMEOUT: 120
+    restart: always
+
+    volumes:
+      - ./pages/leonardo-social-platform:/usr/src/app/
+
+    # alias db = database_dev
+    links:
+      - "database_dev:db"
+  database_dev:
     image: "mongo"
     container_name: "mongo-dev"
 
@@ -23,9 +35,17 @@ services:
       - ./initMongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - ./data/mongodb:/data/db
 
+    command: [--auth]
+    restart: always
+
     secrets:
       - db_root_username
       - db_root_password
+  # redis:
+  #   container_name: "redis-dev"
+  #   image: "redis:6.2.1-alpine"
+  #   ports:
+  #     - "6379:6379"
 
 secrets:
   db_root_username:
