--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-# docker-compose -f ./docker-compose.dev.yml up --build
+# docker-compose -f ./docker-compose.dev.yml up --build --remove-orphans
 version: "3.9"
 services:
   web_dev:
@@ -22,8 +22,8 @@ services:
     links:
       - "database_dev:db"
   database_dev:
-    image: "mongo"
-    container_name: "mongo-dev"
+    image: mongo:latest
+    container_name: mongo
 
     environment:
       - MONGO_INITDB_ROOT_USERNAME_FILE=/run/secrets/db_root_username
@@ -41,11 +41,18 @@ services:
     secrets:
       - db_root_username
       - db_root_password
-  # redis:
-  #   container_name: "redis-dev"
-  #   image: "redis:6.2.1-alpine"
-  #   ports:
-  #     - "6379:6379"
+
+  nginx:
+    image: nginx:latest
+    container_name: dev_nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/logs:/var/log/nginx
+    ports:
+      - 80:80
+      - 443:443
+    links:
+      - "web_dev:web"
 
 secrets:
   db_root_username:
