--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# docker-compose -f ./docker-compose.yml up --build
+# docker-compose -f ./docker-compose.yml up --build --remove-orphans
 version: "3.9"
 services:
   web:
@@ -20,8 +20,8 @@ services:
       - "database:db"
 
   database:
-    image: "mongo"
-    container_name: "mongo"
+    image: mongo:latest
+    container_name: mongo
 
     environment:
       - MONGO_INITDB_ROOT_USERNAME_FILE=/run/secrets/db_root_username
@@ -39,6 +39,17 @@ services:
     secrets:
       - db_root_username
       - db_root_password
+  nginx:
+    image: nginx:latest
+    container_name: production_nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/logs:/var/log/nginx
+    ports:
+      - 80:80
+      - 443:443
+    links:
+      - "web:web"
 
 secrets:
   db_root_username:
