--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     links:
       - "web:web"
 
+    restart: always
+
 secrets:
   db_root_username:
     file: ./data/mongodbAuth/user
