new nginx.conf for distribution

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,10 +8,23 @@ http {
     listen  80;
     listen [::]:80;
 
-    # server_name  domain2.com www.domain2.com;
+    server_name  leonardo.ibdc.ru;
 
     access_log /var/log/nginx/reverse-access.log;
     error_log /var/log/nginx/reverse-error.log;
+
+    listen 443 ssl; # managed by Certbot
+
+    # RSA certificate
+    ssl_certificate etc/nginx/fullchain.pem; # managed by Certbot
+    ssl_certificate_key etc/nginx/privkey.pem; # managed by Certbot
+
+    include /etc/nginx/options-ssl-nginx.conf; # managed by Certbot
+
+    # Redirect non-https traffic to https
+    if ($scheme != "https") {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
 
     # pass requests for dynamic content to rails/turbogears/zope, et al
     location / {
