--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# docker-compose -f ./docker-compose.yml up --build --remove-orphans
+# docker-compose -f ./docker-compose.yml up --build --remove-orphans -d
 version: "3.9"
 services:
   web:
