--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     container_name: production_nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/certs:/etc/nginx
+      - /etc/letsencrypt:/etc/letsencrypt
       - ./nginx/logs:/var/log/nginx
     ports:
       - 80:80
