updated nginx confiug

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,10 +16,10 @@ http {
     listen 443 ssl; # managed by Certbot
 
     # RSA certificate
-    ssl_certificate etc/nginx/fullchain.pem; # managed by Certbot
-    ssl_certificate_key etc/nginx/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/leonardo.ibdc.ru/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/leonardo.ibdc.ru/privkey.pem; # managed by Certbot
 
-    include /etc/nginx/options-ssl-nginx.conf; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 
     # Redirect non-https traffic to https
     if ($scheme != "https") {
